--- a/Mifalot-app/src/app/pages/home/home.component.html
+++ b/Mifalot-app/src/app/pages/home/home.component.html
@@ -35,8 +35,9 @@
     </div>
   </div>
 
+<!-- ================================================================================================================================================ -->
+<!-- User wait for admin to confirm him -->
 
-  <!-- User wait for admin to confirm him -->
   <div *ngIf = "user.$key == 'permission' && user.$value == 4" class = "container confirm" >
       <div class = "panel panel-warning text-right center">
         <div class = "panel-heading"> הינך ממתין לאישור מנהל <i class = "fa fa-exclamation-triangle fa-2x pull-left" aria-hidden = "true"></i> </div>
@@ -45,7 +46,9 @@
 
   </div>
 
-   <!-- User was blocked by admin -->
+<!-- ================================================================================================================================================ -->
+<!-- User was blocked by admin -->
+
   <div *ngIf = "user.$key == 'permission' && user.$value == 5" class = "container confirm" >
       <div class = "panel panel-danger text-right center">
         <div class = "panel-heading"> משתמש זה נחסם <i class = "fa fa-ban fa-2x pull-left" aria-hidden = "true"></i> </div>
@@ -53,5 +56,8 @@
       </div>
 
   </div>
-   
+
+<!-- ================================================================================================================================================ -->
+
 </div>
+<!-- /ngFor -->
