--- a/Mifalot-app/src/app/pages/reports/reports.component.html
+++ b/Mifalot-app/src/app/pages/reports/reports.component.html
@@ -1,6 +1,10 @@
+
+<!-- Page header -->
 <app-page-header [item] = "header"> </app-page-header>
 
+<!-- =========================================================================================================================== -->
 
+<!-- Page content -->
 <div class = "container">
 
 	<!-- Choose Team & Date buttons -->
@@ -34,13 +38,13 @@
 		</div>
 	</div>
 
-<!-- /Choose Team & Date buttons -->
-
 	<p>
 
+<!-- /Choose Team & Date buttons -->
+<!-- =========================================================================================================================== -->
 <!-- Presence Table -->
 
-<div class = "row">
+	<div class = "row">
 		<div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12">
 			<div *ngIf = "dateSelected" class = "panel panel-primary">
 				<div class = "panel-heading">
@@ -76,6 +80,6 @@
 		</div>
 	</div>	
 
-<!-- /Presence Table -->
-
+	<!-- /Presence Table -->
+	
 </div>
