--- a/Mifalot-app/src/app/pages/blocked-users/blocked-users.component.html
+++ b/Mifalot-app/src/app/pages/blocked-users/blocked-users.component.html
@@ -2,9 +2,10 @@
 <!-- Page header -->
 <app-page-header [item] = "header"> </app-page-header>
 
-<div class = "container">
+<!-- ================================================================================================================================================ -->
+<!-- Select user -->
 
-    <!-- Select user -->
+<div class = "container">
     <div *ngIf = "!userSelected">
         <div class = "row" >
             <div *ngFor = "let user of users | async" [ngSwitch] = "user.permission"> 
@@ -16,61 +17,55 @@
             </div>
         </div>
     </div>
-    <!-- /Select user -->
+</div>
 
+<!-- /Select user -->
+<!-- ================================================================================================================================================ -->
 
+<div class = "container">
     <div *ngIf = "userSelected && !userConfirmed">
-        <div class = "container">
         <div class = "profile-head">
             <div class = "row" >
-            <h4 class = "text-center">  :פרטי המשתמש החסום </h4>
-                <div class = "container">
-                <div class = "row">
-                    <div class = "col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad" >
+                <h4 class = "text-center">  :פרטי המשתמש החסום </h4>
+                <div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12 toppad" >
                     <div class = "panel panel-danger">
                         <div class = "panel-heading">
-                        <h3 class = "panel-title text-right"> {{ user.name }} {{ user.lastName }} <span class = "fa fa-user-circle-o"></span> </h3>
+                            <h3 class = "panel-title text-right"> {{ user.name }} {{ user.lastName }} <span class = "fa fa-user-circle-o"></span> </h3>
                         </div>
                         <div class = "panel-body">
-                        <div class = "row">
-                            <div class = "col-md-9 col-lg-9"> 
-                                <table class = "table table-user-information text-right">
-                                    <tbody>
-                                    <tr>
-                                        <td><a href = "{{ userEmail }}"> {{ user.email }} </a></td>
-                                        <td> דוא״ל </td>
-                                    </tr>
-                                    <tr>     
-                                        <td> {{ user.phoneNumber }} </td>
-                                        <td> פלאפון </td>   
-                                    </tr>
-                                    <tr>     
-                                        <td> {{ user.ID }} </td>
-                                        <td> תעודת זהות  </td>   
-                                    </tr>
-                                    </tbody>
-                                </table>
+                            <div class = "row">
+                                <div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
+                                    <table class = "table table-user-information text-right">
+                                        <tbody>
+                                            <tr>
+                                                <td><a href = "{{ userEmail }}"> {{ user.email }} </a></td>
+                                                <td> דוא״ל </td>
+                                            </tr>
+                                            <tr>     
+                                                <td> {{ user.phoneNumber }} </td>
+                                                <td> פלאפון </td>   
+                                            </tr>
+                                            <tr>     
+                                                <td> {{ user.ID }} </td>
+                                                <td> תעודת זהות  </td>   
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                         </div>
-                        </div>
                         <div class = "panel-footer">
-                        <a type = "button" class = "btn btn-sm btn-danger" (click) = "sendUserToConfirmation()"> בטל חסימה </a>
+                            <a type = "button" class = "btn btn-sm btn-danger" (click) = "sendUserToConfirmation()"> בטל חסימה </a>
                         </div>
                     </div>
-                    </div>
-                </div>
                 </div>
             </div>
         </div>
-        </div>
 
+        <!-- Button -->
         <button (click) = "resetAll()" class = "btn btn-md btn-primary btn-block" type = "submit"> חזור לדף קודם </button>
-
     </div>
-
-
-
-
-
-
 </div>
+
+<!-- ================================================================================================================================================ -->
+
