--- a/Mifalot-app/src/app/page-header/page-header.component.css
+++ b/Mifalot-app/src/app/page-header/page-header.component.css
@@ -41,7 +41,7 @@
 {
     .page-header
     {
-        margin-top: 0%;
+        margin-top: 0;
     }
 
     .titlePage
@@ -54,7 +54,7 @@
 {
     .page-header
     {
-       margin-top: 0%;    
+       margin-top: 0;    
     }
 
     .titlePage
