--- a/Mifalot-app/src/app/pages/login/login.component.css
+++ b/Mifalot-app/src/app/pages/login/login.component.css
@@ -1,29 +1,22 @@
-
 .loginmodal-container 
 {
   padding: 30px;
   max-width: 350px;
-  width: 100% !important;
+  width: 100%;
   background-color: transparent;
   margin: 0 auto;
   border-radius: 2px;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
   overflow: hidden;
   font-family: roboto;
-      left: 50%;
-    position: fixed;
-    top: 50%;
-    transform: translate(-50%, -50%);
+  left: 50%;
+  position: fixed;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
-
-.loginmodal-container h1 {
-  text-align: center;
-  font-size: 1.8em;
-  font-family: roboto;
-}
-
-.loginmodal-container a {
+.loginmodal-container a
+{
   text-decoration: none;
   color: white;
   font-weight: 400;
@@ -33,12 +26,10 @@
   transition: opacity ease 0.5s;
 }
 
-
 input[type = "email"], input[type = "password"] 
 {
 	text-align: right;
 }
-
 
 .input-group
 {
