fixing input direction messages

--- a/Mifalot-app/src/app/pages/messages/messages.component.html
+++ b/Mifalot-app/src/app/pages/messages/messages.component.html
@@ -96,7 +96,7 @@
       <span class = "input-group-btn"> 
         <button class = "btn btn-primary" type = "submit" (click) = "sendMessage()"> <i class = "fa fa-arrow-up"></i> שלח </button>
       </span>  
-      <input type = "text" class = "form-control" id = "msg-input" placeholder = "..כתוב את הודעתך כאן" (keyup.enter) = "sendMessage()" [(ngModel)] = "newMessage">
+      <input type = "text" class = "form-control" id = "msg-input" placeholder = "כתוב את הודעתך כאן.." (keyup.enter) = "sendMessage()" [(ngModel)] = "newMessage">
     </div>
 
     <!-- /Send message input -->
