--- a/Mifalot-app/src/app/pages/pupils-management/pupils-management.component.html
+++ b/Mifalot-app/src/app/pages/pupils-management/pupils-management.component.html
@@ -16,7 +16,7 @@
             </div>
 
             <div *ngFor = "let team of teams | async" class = "col-lg-12 col-md-12 col-xs-12 thumb">
-                <span *ngIf = "permission == 3 && team.managerID == uid" class = "thumbnail" (click) = "getPupilsByTeam(team)">
+                <span *ngIf = "userObject.permission == 3 && userObject.uid == team.managerID" class = "thumbnail" (click) = "getPupilsByTeam(team)">
                     <button  type = "button" class = "btn btn-default btn-block btn-team" > {{ team.name }} <i class = "fa fa-soccer-ball-o" > </i> </button>
                 </span>
             </div>
