--- a/Mifalot-app/src/app/pages/reports/reports.component.css
+++ b/Mifalot-app/src/app/pages/reports/reports.component.css
@@ -47,9 +47,10 @@ th {
     text-align: right;
     min-height: 60px;
     max-height: 100px;
+    width: 100%;
+    max-width: 100%;
     overflow-y: scroll;
 }
-
 
 /****************************************/
 /********** Scrollbar Height  ***********/
