--- a/Mifalot-app/src/app/pages/reports/reports.component.html
+++ b/Mifalot-app/src/app/pages/reports/reports.component.html
@@ -10,28 +10,28 @@
 	<!-- Choose Team & Date buttons -->
 
 	<div class = "row"> 
-		<div class = "col-xs-6 col-sm-6 col-md-6 col-lg-6">
+		<div class = "col-xs-4 col-sm-4 col-md-4 col-lg-4">
 			<div *ngIf = "teamSelected" class = "dropdown">
 				<button class = "btn btn-primary btn-block dropdown-toggle" type = "button" data-toggle = "dropdown">
 					<span class = "caret"></span>
 					<span> {{ chosenDateString }} </span>
 				</button>
 				<ul class = "dropdown-menu">
-					<li *ngFor = "let date of dates">
-						<a (click) = "getPupils(date.date, date.team)"> {{ date.date | date:'dd/MM/yy'}} </a>
+					<li *ngFor = "let attendance of attendances | async">
+						<a (click) = "getPupils(attendance.date, attendance.presence)"> {{ attendance.date | date:'dd/MM/yy'}} </a>
 					</li>
 				</ul>
 			</div>
 		</div>
-		<div class = "col-xs-6 col-sm-6 col-md-6 col-lg-6">
+		<div class = "col-xs-8 col-sm-8 col-md-8 col-lg-8">
 			<div class = "dropdown">
 				<button class = "btn btn-primary btn-block dropdown-toggle" type = "button" data-toggle = "dropdown">
 					<span>	{{ chosenTeam }} </span>
 					<span class = "caret"></span>
 				</button>
 				<ul class = "dropdown-menu">
-					<li *ngFor = "let team of teams">
-						<a (click) = "getDates(team.name)"> {{ team.name }} </a>
+					<li *ngFor = "let team of teams | async">
+						<a *ngIf = "user.permission == 2 && user.uid == team.managerID || user.permission == 3 && user.uid == team.coachID" (click) = "getDates(team.name)"> {{ team.name }} </a>
 					</li>
 				</ul>
 			</div>
@@ -48,7 +48,7 @@
 		<div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12">
 			<div *ngIf = "dateSelected" class = "panel panel-primary">
 				<div class = "panel-heading">
-					<h3 class = "panel-title"> {{ chosenDate | date: "dd/MM/yy" }} רשימת נוכחות עבור {{ chosenTeam }} בתאריך  </h3>
+					<h3 class = "panel-title"> רשימת נוכחות </h3>
 				</div>
 				<div class = "panel-body">
 					<input type = "text" class = "form-control" id = "dev-table-filter" data-action = "filter" data-filters = "#dev-table" placeholder = "Filter Developers" />
@@ -65,9 +65,9 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr *ngFor = "let pupil of pupils; let i = index" [attr.data-index] = "i">
-								<td *ngIf = "isPupilPresence(pupil.presence)"><font color="#2eb82e"> {{ pupilPresence }} </font></td>
-								<td *ngIf = "!isPupilPresence(pupil.presence)"><font color="#FF0000"> {{ pupilPresence }} </font></td>
+							<tr *ngFor = "let pupil of pupils; let i = index">
+								<td *ngIf = "isPupilPresence(pupil.presence)"><font color = "#2eb82e"> {{ pupilPresence }} </font></td>
+								<td *ngIf = "!isPupilPresence(pupil.presence)"><font color = "#FF0000"> {{ pupilPresence }} </font></td>
 								<td> {{ pupil.ID }} </td>
 								<td> {{ pupil.lastName }} </td>
 								<td> {{ pupil.name }} </td>
