--- a/Mifalot-app/src/app/pages/messages/messages.component.html
+++ b/Mifalot-app/src/app/pages/messages/messages.component.html
@@ -77,10 +77,10 @@
           <p class = "date-stamp"> {{ message.timestamp | date: "dd/MM/yy" }} </p> 
         </div> -->
         <div class = "bubble" [class.bubble-alt] = "isMe(message.email)"  [class.yellow] = "!isMe(message.email)">
-          <p id = "msg-name"> {{ message.displayName }}</p>
+          <p id = "msg-name"> {{ message.displayName + ' ' + message.lastName }}</p>
           <p id = "msg-context"> {{ message.message }} </p>
           <div class = "author">
-            <span> {{ message.timestamp | date: "hh:mm a" }} </span>
+            <span id = "msg-time"> {{ message.timestamp | date: "hh:mm a" }} </span>
           </div>
         </div>
       </div>
