--- a/Mifalot-app/src/app/pages/messages/messages.component.css
+++ b/Mifalot-app/src/app/pages/messages/messages.component.css
@@ -23,27 +23,6 @@ input
   direction: rtl;
 }
 
-.chat-title
-{
-  margin:0 auto;
-  width: 100%;
-  display: block;
-  /*color: #355681;*/
-  color:white;
-  text-align: center;
-  margin-bottom: 2%;
-  font-weight: 400;
-	position: relative;  
-	font-size: 17px;
-	line-height: 26px;
-  text-shadow: 1px 1.5px 2px rgba(150, 150, 150, 1);
-  box-shadow: inset 0 0 0 1px white;
-	/*inset 0 0 0 1px rgba(53,86,129, 0.4), 
-	inset 0 0 5px rgba(53,86,129, 0.5),*/
-	/*inset -285px 0 35px white;*/
-	border-radius: 10px 10px 10px 10px;
-}
-
 /********************************************/
 
 .create-chat
@@ -80,7 +59,7 @@ p
 {
   padding: 2%;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-size: 62.5%;
+  font-size: 55%;
   line-height: 1;
   color: #414141;
   margin: 0 auto;
@@ -90,6 +69,49 @@ p
   overflow-y: scroll;
 }
 
+.chat-rooms
+{
+  font-size: 100%;
+}
+
+#author-name
+{
+  font-size: 70%;
+}
+
+.text-bold
+{
+  font-weight: bold;
+}
+
+.list-group
+{
+  margin-bottom: 3%;
+}
+
+.jumbotron
+{
+  background-color:#ffffff;
+  border: 1px solid #AAA;
+  border-bottom: 3px solid #BBB;
+  padding: 0;
+  margin-bottom: 0;
+  overflow: hidden;
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  font-family: 'Roboto', sans-serif;
+  -webkit-transition: box-shadow 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.blue 
+{
+  color: #1c2b5a;
+}
+
+.glyphicon-trash
+{
+  color: darkred;
+}
 input::placeholder
 {
   text-align: right;
@@ -328,7 +350,12 @@ input::placeholder
 {
     .vertical-menu 
     {
-      height: 475px;
+      height: 495px;
+    }
+
+    .messages
+    {
+      height: 450px;
     }
 }
 
