--- a/Mifalot-app/src/app/pages/messages/messages.component.html
+++ b/Mifalot-app/src/app/pages/messages/messages.component.html
@@ -30,12 +30,16 @@
   
     <p>
       
-    <div class = "vertical-menu" >
-      <div *ngFor = "let chatRoom of chatRooms | async" class = "col-lg-12 col-md-12 col-xs-12 thumb">
-        <a class = "thumbnail" (click) = "enterChatRoom(chatRoom)"> 
-          <button type = "button" class = "btn-chat btn btn-default btn-block" > {{ chatRoom.name }} </button>
-        </a>
-      </div>
+    <div class = "vertical-menu chat-rooms">
+        <div *ngFor = "let chatRoom of chatRooms | async" class = "list-group text-right">
+            <span class = "list-group-item clearfix" (click) = "enterChatRoom(chatRoom)">  
+                <span class = "text-bold"> {{ chatRoom.name }} </span> <br> <span id = "author-name"> פותח: {{ chatRoom.authorName }} </span>
+                <span class = "fa fa-message"></span>
+                <span *ngIf = "user.uid == chatRoom.authorID" class = "pull-left">
+                    <span class = "glyphicon glyphicon-trash" (click) = "removeChatRoom(chatRoom)"></span>
+                </span>
+            </span>
+        </div>
     </div>
   </div>
 </div>
@@ -69,9 +73,16 @@
 <!-- Chat messages -->
 
   <div *ngIf = "!noChatRoomSelected && !createNewChatRoom">
-    
-    <span class = "chat-title"> {{ chatRoomTitle }} </span>
-    <div #scrollMe class = "vertical-menu" >
+
+    <div class = "container">
+	    <div class = "row">
+        <div class = "jumbotron text-center">
+          <h4 class = "blue text-bold"> {{ chatRoomTitle }} </h4>
+          <h6> {{ chatRoomAuthor }} </h6>
+        </div>
+      </div>
+    </div>
+    <div #scrollMe class = "vertical-menu messages" >
       <div *ngFor = "let message of currentChat | async" > 
         <!--<div *ngIf = "needToPrint(message.timestamp | date: 'dd/MM/yy')">
           <p class = "date-stamp"> {{ message.timestamp | date: "dd/MM/yy" }} </p> 
