--- a/Mifalot-app/src/app/pages/messages/messages.component.html
+++ b/Mifalot-app/src/app/pages/messages/messages.component.html
@@ -32,7 +32,7 @@
       
     <div class = "vertical-menu chat-rooms">
         <div *ngFor = "let chatRoom of chatRooms | async" class = "list-group text-right">
-            <span class = "list-group-item clearfix" (click) = "enterChatRoom(chatRoom)">  
+            <span class = "list-group-item clearfix direction-rtl" (click) = "enterChatRoom(chatRoom)">  
                 <span class = "text-bold"> {{ chatRoom.name }} </span> <br> <span id = "author-name"> פותח: {{ chatRoom.authorName }} </span>
                 <span class = "fa fa-message"></span>
                 <span *ngIf = "user.uid == chatRoom.authorID" class = "pull-left">
@@ -77,7 +77,7 @@
     <div class = "container">
 	    <div class = "row">
         <div class = "jumbotron text-center">
-          <h4 class = "blue text-bold"> {{ chatRoomTitle }} </h4>
+          <h4 class = "direction-rtl blue text-bold"> {{ chatRoomTitle }} </h4>
           <h6> {{ chatRoomAuthor }} </h6>
         </div>
       </div>
